--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "start": "next start"
   },
   "dependencies": {
+    "axios": "^1.6.2",
+    "fs": "^0.0.1-security",
     "next": "latest",
     "puppeteer": "^21.6.0",
     "puppeteer-extra": "^3.3.6",
@@ -19,6 +21,9 @@
     "@types/node": "^18.0.0",
     "@types/react": "^18.0.14",
     "@types/react-dom": "^18.0.5",
+    "autoprefixer": "^10.0.1",
+    "postcss": "^8",
+    "tailwindcss": "^3.3.0",
     "typescript": "^4.7.4"
   }
 }
